<resources>
    <string name="app_name">易沟通</string>
    <string name="MiPush_AppId">2882303761517883600</string>
    <string name="MiPush_AppKey">5951788342600</string>

    <string name="no_disturb_warning">“启用免打扰”打开后，来电和短信将被设为静音，在首页号码处将出现月亮图标。</string>
    <string name="no_disturb_warning2">设置“免打扰时间段”，可在选择的时间段内设置免打扰功能，在 选择时间段内来电和短信将被设为静音，在首页号码处将出现月亮 图标。</string>
    <string name="password_tip">密码应由8-16位数字和字母组成（不能是纯数字)</string>
    <string name="pwd_tip">密码应由8-16位数字和字母组成（不能是纯数字)</string>
    <string name="protocol">注册即表示您已同意《易沟通APP用户协议》</string>
    <string name="already_have_account">已有账号？马上登录</string>

    <string name="status_layout_manager_loading">正在加载</string>
    <string name="status_layout_manager_empty">暂无数据</string>
    <string name="status_layout_manager_error">网络连接失败</string>
    <string name="status_layout_manager_retry">重新加载</string>
    <string name="pay_success">支付成功</string>
    <string name="back_home">回到首页</string>
    <string name="check_my_order">查看我的订单</string>
    <string name="pay_fail">支付失败</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="tip">提示</string>
    <string name="answer">接听</string>
    <string name="hang_up">挂断</string>
    <string name="message">消息</string>
    <string name="edit">编辑</string>
    <string name="search_contact">搜索联系人</string>
    <string name="search_message">搜索消息</string>
    <string name="delete">删除</string>
    <string name="refresh">刷新</string>
    <string name="hide">隐藏</string>
</resources>
