<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_75"
            android:drawableTop="@mipmap/ic_pay_success"
            android:drawablePadding="@dimen/margin_size_12"
            android:text="@string/pay_success"
            android:textColor="@color/color_3"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_45"
            android:text="您已成功支付"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_pay_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_12"
            android:textColor="#ff333333"
            android:textSize="18sp"
            tools:text="￥12.00" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_45">

            <Button
                android:id="@+id/btn_back_home"
                android:layout_width="@dimen/margin_size_90"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle_frame"
                android:text="@string/back_home"
                android:textColor="@color/color_3CA3ED"
                android:textSize="@dimen/text_size_13" />

            <Button
                android:id="@+id/btn_order"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_size_20"
                android:background="@drawable/shape_rectangle_frame"
                android:text="@string/check_my_order"
                android:textColor="@color/color_3CA3ED"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_75"
            android:drawableTop="@mipmap/ic_pay_fail"
            android:drawablePadding="@dimen/margin_size_12"
            android:text="@string/pay_fail"
            android:textColor="@color/color_3"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_45"
            android:text="抱歉，订单未能支付成功！"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_size_45">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/margin_size_90"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle_frame"
                android:text="@string/cancel"
                android:textColor="@color/color_3CA3ED"
                android:textSize="@dimen/text_size_13" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_size_20"
                android:background="@drawable/shape_rectangle_frame"
                android:text="@string/retry"
                android:textColor="@color/color_3CA3ED"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>