<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_6DBFFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_size_12"
            android:paddingEnd="@dimen/margin_size_12"
            android:text="@string/edit"
            android:textColor="#ffffffff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/margin_size_15"
            android:paddingEnd="@dimen/margin_size_15"
            android:src="@mipmap/ic_edit"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_select_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingStart="@dimen/margin_size_15"
            android:paddingEnd="@dimen/margin_size_15"
            android:text="全选"
            android:textColor="@color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_15"
            android:layout_marginTop="@dimen/margin_size_10"
            android:layout_marginEnd="@dimen/margin_size_15"
            android:layout_marginBottom="@dimen/margin_size_10"
            android:background="@mipmap/ic_search_box_bg"
            android:drawableStart="@mipmap/ic_search"
            android:drawablePadding="@dimen/margin_size_7"
            android:gravity="center_vertical"
            android:hint="@string/search_message"
            android:imeOptions="actionSearch"
            android:paddingStart="@dimen/margin_size_11"
            android:paddingEnd="@dimen/margin_size_11"
            android:singleLine="true"
            android:textColor="@color/color_3"
            android:textColorHint="@color/color_9"
            android:textSize="@dimen/text_size_13"
            app:layout_scrollFlags="scroll|enterAlways" />

        <include layout="@layout/recycler_view" />
    </LinearLayout>
</RelativeLayout>