<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_6DBFFA"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_6DBFFA">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@mipmap/ic_logo_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:background="@mipmap/ic_login_edit_text"
            android:digits="1234567890"
            android:gravity="center_vertical"
            android:hint="请输入手机号码"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_3"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@mipmap/ic_login_edit_text"
            app:layout_constraintTop_toBottomOf="@id/et_phone">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginEnd="100dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入短信验证码"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/color_3"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_code"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_13" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@mipmap/ic_login_edit_text"
            android:gravity="center_vertical"
            android:hint="请输入密码"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_3"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_code" />

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@mipmap/ic_login_edit_text"
            android:gravity="center_vertical"
            android:hint="请确认密码"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_3"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_10"
            android:text="@string/pwd_tip"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_pwd" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@mipmap/ic_btn_login"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/color_6DBFFA"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tip" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_15"
            android:text="@string/protocol"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <TextView
            android:id="@+id/tv_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_80"
            android:layout_marginBottom="@dimen/margin_size_20"
            android:text="@string/already_have_account"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocol" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>